--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@
 
 # URL вашого backend API
 # Локально: http://localhost:3000/api
-# Production: https://your-api-domain.com/api
+# Production: https://dayzstalker.win/api
 VITE_API_URL=http://localhost:3000/api
 
 # ===========================================
