--- a/server/.env.example
+++ b/server/.env.example
@@ -1,10 +1,10 @@
-DB_HOST=localhost
-DB_USER=root
-DB_PASSWORD=your_password
-DB_NAME=stalker_rp
+DB_HOST=your_mysql_host
+DB_USER=your_mysql_user
+DB_PASSWORD=your_mysql_password
+DB_NAME=your_database_name
 
 PORT=3000
 FRONTEND_URL=http://localhost:5173
 
-JWT_SECRET=your-secret-key-change-in-production
+JWT_SECRET=your_jwt_secret_key
 STEAM_API_KEY=your_steam_api_key
