--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:3000/api
+VITE_API_URL=https://dayzstalker.win/api
 
 # Google Sheets Webhook (optional)
 # VITE_GOOGLE_SHEETS_WEBHOOK_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
