--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,26 +1,29 @@
+Options -MultiViews
+
 <IfModule mod_mime.c>
-  AddType application/javascript .js
+  AddType application/javascript .js .mjs
   AddType text/css .css
   AddType image/png .png
   AddType image/webp .webp
+</IfModule>
+
+<IfModule mod_headers.c>
+  <FilesMatch "\.(js|mjs)$">
+    Header set Content-Type "application/javascript; charset=utf-8"
+  </FilesMatch>
+  <FilesMatch "\.css$">
+    Header set Content-Type "text/css; charset=utf-8"
+  </FilesMatch>
 </IfModule>
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
 
+  RewriteCond %{REQUEST_URI} \.(js|css|png|jpg|jpeg|gif|webp|svg|ico|woff|woff2|ttf|eot)$ [NC]
+  RewriteRule ^ - [L]
+
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME} !-l
-  RewriteCond %{REQUEST_URI} !^/assets/
-  RewriteRule . /index.html [L]
-</IfModule>
-
-<IfModule mod_headers.c>
-  <FilesMatch "\.(js|mjs)$">
-    Header set Content-Type "application/javascript"
-  </FilesMatch>
-  <FilesMatch "\.css$">
-    Header set Content-Type "text/css"
-  </FilesMatch>
+  RewriteRule ^ index.html [L]
 </IfModule>
