--- a/public/.htaccess
+++ b/public/.htaccess
@@ -20,10 +20,12 @@ Options -MultiViews
   RewriteEngine On
   RewriteBase /
 
-  RewriteCond %{REQUEST_URI} \.(js|css|png|jpg|jpeg|gif|webp|svg|ico|woff|woff2|ttf|eot)$ [NC]
+  RewriteCond %{REQUEST_URI} ^/assets/ [NC]
   RewriteRule ^ - [L]
 
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^ index.html [L]
+  RewriteCond %{REQUEST_FILENAME} -f [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteRule ^ - [L]
+
+  RewriteRule . /index.html [L]
 </IfModule>
