--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,5 +1,3 @@
-Options -MultiViews
-
 <IfModule mod_mime.c>
   AddType application/javascript .js .mjs
   AddType text/css .css
@@ -7,25 +5,10 @@ Options -MultiViews
   AddType image/webp .webp
 </IfModule>
 
-<IfModule mod_headers.c>
-  <FilesMatch "\.(js|mjs)$">
-    Header set Content-Type "application/javascript; charset=utf-8"
-  </FilesMatch>
-  <FilesMatch "\.css$">
-    Header set Content-Type "text/css; charset=utf-8"
-  </FilesMatch>
-</IfModule>
-
 <IfModule mod_rewrite.c>
   RewriteEngine On
-  RewriteBase /
 
-  RewriteCond %{REQUEST_URI} ^/assets/ [NC]
-  RewriteRule ^ - [L]
-
-  RewriteCond %{REQUEST_FILENAME} -f [OR]
-  RewriteCond %{REQUEST_FILENAME} -d
-  RewriteRule ^ - [L]
-
-  RewriteRule . /index.html [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule ^(.*)$ /index.html [L,QSA]
 </IfModule>
