--- a/.env
+++ b/.env
@@ -1,6 +1,5 @@
 # API Configuration
-# Замініть на URL вашого Railway проекту після деплою
-VITE_API_URL=https://ваш-проект.railway.app/api
+VITE_API_URL=https://dayzstalker.win/api
 
 # Google Sheets Webhook (optional)
 # VITE_GOOGLE_SHEETS_WEBHOOK_URL=https://script.google.com/macros/s/YOUR_SCRIPT_ID/exec
