--- a/public/.htaccess
+++ b/public/.htaccess
@@ -17,20 +17,44 @@
   RewriteEngine On
   RewriteBase /
 
+  # Skip real files and directories
+  RewriteCond %{REQUEST_FILENAME} -f [OR]
+  RewriteCond %{REQUEST_FILENAME} -d
+
+  # Skip API and auth routes
+  RewriteCond %{REQUEST_URI} ^/api/ [OR]
+  RewriteCond %{REQUEST_URI} ^/steam-auth/
+
+  # Skip certain paths
+  RewriteCond %{REQUEST_URI} ^/assets/ [OR]
+  RewriteCond %{REQUEST_URI} ^/public/
+  RewriteRule ^ - [L]
+
+  # Rewrite all other requests to index.html for SPA routing
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteCond %{REQUEST_FILENAME} !-l
-  RewriteCond %{REQUEST_URI} !^/assets/
-  RewriteCond %{REQUEST_URI} !^/api/
-  RewriteCond %{REQUEST_URI} !^/steam-auth/
-  RewriteRule . /index.html [L]
+  RewriteRule ^ /index.html [L]
 </IfModule>
 
 <IfModule mod_headers.c>
-  <FilesMatch "\.(js|mjs)$">
+  # Cache assets with hash in filename for long time
+  <FilesMatch "\.(js|css|woff2|woff|ttf|eot|webp)$">
     Header set Content-Type "application/javascript"
+    Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
+
   <FilesMatch "\.css$">
     Header set Content-Type "text/css"
+    Header set Cache-Control "public, max-age=31536000, immutable"
+  </FilesMatch>
+
+  <FilesMatch "\.(js|mjs)$">
+    Header set Content-Type "application/javascript"
+    Header set Cache-Control "public, max-age=31536000, immutable"
+  </FilesMatch>
+
+  # Don't cache HTML
+  <FilesMatch "\.html?$">
+    Header set Cache-Control "public, max-age=0, must-revalidate"
   </FilesMatch>
 </IfModule>
