--- a/public/.htaccess
+++ b/public/.htaccess
@@ -28,7 +28,7 @@
 
 <IfModule mod_headers.c>
   # Cache assets with hash in filename for long time
-  <FilesMatch "\.(js|css|woff2|woff|ttf|eot|webp)$">
+  <FilesMatch "\.(js|mjs)$">
     Header set Content-Type "application/javascript"
     Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
@@ -38,8 +38,12 @@
     Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
 
-  <FilesMatch "\.(js|mjs)$">
-    Header set Content-Type "application/javascript"
+  <FilesMatch "\.(woff2|woff|ttf|eot)$">
+    Header set Cache-Control "public, max-age=31536000, immutable"
+  </FilesMatch>
+
+  <FilesMatch "\.webp$">
+    Header set Content-Type "image/webp"
     Header set Cache-Control "public, max-age=31536000, immutable"
   </FilesMatch>
 
