--- a/.htaccess
+++ b/.htaccess
@@ -1,8 +1,20 @@
+<IfModule mod_mime.c>
+    AddType application/javascript js mjs
+    AddType text/css css
+</IfModule>
+
 <IfModule mod_rewrite.c>
   RewriteEngine On
   RewriteBase /
-  RewriteRule ^index\.html$ - [L]
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule . /index.html [L]
+  
+  # Don't rewrite if it's a real file
+  RewriteCond %{REQUEST_FILENAME} -f
+  RewriteRule ^ - [L]
+  
+  # Don't rewrite if it's a real directory
+  RewriteCond %{REQUEST_FILENAME} -d
+  RewriteRule ^ - [L]
+  
+  # Rewrite everything else to index.html
+  RewriteRule ^(.*)$ /index.html [L,QSA]
 </IfModule>
